--- a/src/main/java/tnt/editor/MainForm.form
+++ b/src/main/java/tnt/editor/MainForm.form
@@ -26,17 +26,25 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="fileView1" alignment="0" pref="824" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="segmentView1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="47" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="fileView1" alignment="0" max="32767" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="segmentView1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="442" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="tnt.editor.FileView" name="fileView1">
+    <Component class="tnt.editor.SegmentView" name="segmentView1">
     </Component>
   </SubComponents>
 </Form>
